// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSideNavItem href is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <a
    class="euiSideNavItemButton euiSideNavItemButton--isClickable"
    href="#"
    rel="noreferrer"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem href is rendered with rel 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <a
    class="euiSideNavItemButton euiSideNavItemButton--isClickable"
    href="#"
    rel="noopener noreferrer"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button />
      </span>
    </span>
  </a>
</div>
`;

exports[`EuiSideNavItem is rendered 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button
          aria-label="aria-label"
          class="testClass1 testClass2"
          data-test-subj="test subject string"
        />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected defaults to false 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem isSelected is rendered when specified as true 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton euiSideNavItemButton-isSelected"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button />
      </span>
    </span>
  </div>
</div>
`;

exports[`EuiSideNavItem preserves child's classes 1`] = `
<div
  class="euiSideNavItem euiSideNavItem--root"
>
  <div
    class="euiSideNavItemButton"
  >
    <span
      class="euiSideNavItemButton__content"
    >
      <span
        class="euiSideNavItemButton__label"
      >
        <button
          class="test"
        />
      </span>
    </span>
  </div>
</div>
`;
